tests/invalid_submodules/subtype_submodule.err_exp
subtype_submodule.m:024: Error: undefined type `fruit2'/0.
subtype_submodule.m:024: In definition of type `citrus2'/0:
subtype_submodule.m:024:   error: undefined type `fruit2'/0.
